# serializer version: 1
# name: TestModemDataParsing.test_full_payload_snapshot
  list([
    dict({
      'active_sim': 1,
      'auto_2g_bands': False,
      'auto_3g_bands': False,
      'auto_5g_mode': False,
      'band': '5G N78',
      'baudrate': 115200,
      'builtin': True,
      'busy_state': 'Idle',
      'busy_state_id': 1,
      'ca_signal': list([
        dict({
          'band': 'LTE B1',
          'bandwidth': '20',
          'frequency': 100,
          'pcid': 323,
          'primary': True,
          'rsrp': -87,
          'rsrq': -9,
          'sinr': 12,
        }),
        dict({
          'band': 'LTE B7',
          'bandwidth': '20',
          'frequency': 2850,
          'pcid': 364,
          'primary': False,
          'rsrp': -103,
          'rsrq': -13,
          'sinr': 3,
        }),
        dict({
          'band': 'LTE B20',
          'bandwidth': '10',
          'frequency': 6300,
          'pcid': 39,
          'primary': False,
          'rsrp': -83,
          'rsrq': -13,
          'sinr': 0,
        }),
        dict({
          'band': '5G N78',
          'bandwidth': '80',
          'frequency': 631968,
          'primary': False,
        }),
      ]),
      'cell_info': list([
        dict({
          'bandwidth': '20',
          'cellid': '987654',
          'earfcn': 111,
          'mcc': '262',
          'mnc': '02',
          'pcid': 323,
          'sinr': 12,
          'tac': '65432',
          'ue_state': 3,
        }),
        dict({
          'bandwidth': '80',
          'cellid': '987654',
          'mcc': '262',
          'mnc': '02',
          'nr-arfcn': 654321,
          'pcid': 220,
          'rsrp': -103,
          'rsrq': -12,
          'sinr': 3,
          'ue_state': 3,
        }),
      ]),
      'cellid': '987654',
      'cfg_version': '04.202.04.202',
      'conntype': '5G (NSA)',
      'csd': False,
      'data_conn_state': 'Connected',
      'data_conn_state_id': 1,
      'data_off': False,
      'dynamic_mtu': True,
      'framed_routing': True,
      'iccid': '12345678901234567890',
      'id': '2-1',
      'imei': '123456789012345',
      'imsi': '123456789012345',
      'ipv6': True,
      'is_busy': 0,
      'low_signal_reconnect': True,
      'manufacturer': 'Quectel',
      'mobile_dfota': False,
      'mobile_stage': 19,
      'mode': 0,
      'model': 'RG501Q-EU',
      'modem_state_id': 1,
      'multi_apn': True,
      'name': 'Internal modem',
      'netstate': 'Registered, home',
      'netstate_id': 1,
      'no_ussd': False,
      'nr5g_sa_disabled': False,
      'ntype': '5G-NSA',
      'oper': 'test-operator.de',
      'operator': 'test-operator.de',
      'operator_state': 'Registered, home',
      'operator_state_id': 1,
      'operators_scan': True,
      'pinleft': 3,
      'pinstate': 'Inserted',
      'pinstate_id': 1,
      'primary': True,
      'pukleft': 10,
      'rsrp': -86,
      'rsrq': -7,
      'rssi': -58,
      'rxbytes': 427791751874,
      'sc_band_av': 'Active',
      'serial': 'XXXYY12345678',
      'service_modes': dict({
        '3G': list([
          'wcdma_850',
          'wcdma_900',
          'wcdma_2100',
        ]),
        '4G': list([
          'lte_b1',
          'lte_b3',
          'lte_b5',
          'lte_b7',
          'lte_b8',
          'lte_b20',
          'lte_b28',
          'lte_b32',
          'lte_b38',
          'lte_b40',
          'lte_b41',
          'lte_b42',
          'lte_b43',
        ]),
        '5G_NSA': list([
          'nsa_5g_n1',
          'nsa_5g_n3',
          'nsa_5g_n5',
          'nsa_5g_n7',
          'nsa_5g_n8',
          'nsa_5g_n20',
          'nsa_5g_n28',
          'nsa_5g_n38',
          'nsa_5g_n40',
          'nsa_5g_n41',
          'nsa_5g_n77',
          'nsa_5g_n78',
        ]),
        '5G_SA': list([
          '5g_n1',
          '5g_n3',
          '5g_n5',
          '5g_n7',
          '5g_n8',
          '5g_n20',
          '5g_n28',
          '5g_n38',
          '5g_n40',
          '5g_n41',
          '5g_n77',
          '5g_n78',
        ]),
      }),
      'signal': -58,
      'sim_count': 2,
      'sim_switch_enabled': False,
      'simstate': 'Inserted',
      'simstate_id': 0,
      'sinr': 13,
      'state': 'Connected',
      'state_id': 1,
      'tac': '65432',
      'temperature': 45,
      'txbytes': 210590303696,
      'version': 'RG501QEUAAR12A11M4G',
      'volte': False,
      'volte_supported': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_additional_device_fixtures[rut241]
  list([
    dict({
      'active_sim': 1,
      'auto_2g_bands': False,
      'auto_3g_bands': False,
      'auto_5g_mode': False,
      'band': 'LTE B20',
      'baudrate': 115200,
      'builtin': True,
      'busy_state': 'Idle',
      'busy_state_id': 1,
      'ca_signal': list([
      ]),
      'cell_info': list([
        dict({
          'bandwidth': '5',
          'cellid': 'xx',
          'earfcn': 6225,
          'mcc': '234',
          'mnc': '30',
          'pcid': 485,
          'tac': '26380',
          'ue_state': 3,
        }),
      ]),
      'cellid': 'xx',
      'conntype': '4G (LTE); VoLTE',
      'csd': False,
      'data_conn_state': 'Connected',
      'data_conn_state_id': 1,
      'data_off': False,
      'dynamic_mtu': True,
      'framed_routing': False,
      'iccid': 'xx',
      'id': '1-1',
      'imei': 'xx',
      'imsi': 'xx',
      'ipv6': True,
      'is_busy': 0,
      'low_signal_reconnect': True,
      'manufacturer': 'Meiglink',
      'mobile_dfota': False,
      'mobile_stage': 19,
      'mode': 0,
      'model': 'SLM750-VE',
      'modem_state_id': 1,
      'multi_apn': True,
      'name': 'Internal modem',
      'netstate': 'Registered, home',
      'netstate_id': 1,
      'no_ussd': False,
      'nr5g_sa_disabled': False,
      'ntype': 'LTE',
      'oper': 'EE',
      'operator': 'EE',
      'operator_state': 'Registered, home',
      'operator_state_id': 1,
      'operators_scan': True,
      'pinleft': 3,
      'pinstate': 'Inserted',
      'pinstate_id': 1,
      'primary': True,
      'provider': 'EE',
      'pukleft': 10,
      'rsrp': -107,
      'rsrq': -13,
      'rssi': -84,
      'rxbytes': 13194370973,
      'sc_band_av': 'Inactive',
      'serial': 'xx',
      'service_modes': dict({
        '2G': list([
          'gsm_900',
          'gsm_1800',
        ]),
        '3G': list([
          'wcdma_850',
          'wcdma_900',
          'wcdma_2100',
        ]),
        '4G': list([
          'lte_b1',
          'lte_b3',
          'lte_b5',
          'lte_b7',
          'lte_b8',
          'lte_b20',
          'lte_b40',
        ]),
      }),
      'signal': -84,
      'sim_count': 1,
      'sim_switch_enabled': False,
      'simstate': 'Inserted',
      'simstate_id': 0,
      'sinr': 2,
      'state': 'Connected',
      'state_id': 1,
      'tac': '26380',
      'temperature': 32,
      'txbytes': 26064691191,
      'version': 'SLM750-V_4.57.20_EQ101',
      'volte': True,
      'volte_supported': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_additional_device_fixtures[rut950]
  list([
    dict({
      'active_sim': 1,
      'band': 'LTE B28',
      'baudrate': 115200,
      'builtin': True,
      'busy_state': 'Idle',
      'busy_state_id': 1,
      'ca_signal': list([
      ]),
      'cell_info': list([
        dict({
          'cellid': '151453955',
          'earfcn': 9410,
          'mcc': '505',
          'mnc': '01',
          'pcid': 89,
          'ue_state': 3,
        }),
      ]),
      'cellid': '**REDACTED**',
      'conntype': '4G (LTE)',
      'csd': False,
      'data_off': False,
      'dynamic_mtu': True,
      'iccid': '**REDACTED**',
      'id': '1-1',
      'imei': '**REDACTED**',
      'imsi': '**REDACTED**',
      'ipv6': True,
      'is_busy': 0,
      'lac': '36977',
      'mobile_stage': 19,
      'mode': 0,
      'model': 'EC25-AU',
      'multi_apn': True,
      'name': 'Internal modem',
      'netstate': 'Registered, home',
      'netstate_id': 1,
      'ntype': 'LTE',
      'oper': 'Telstra Telstra',
      'operators_scan': True,
      'pinleft': 3,
      'pinstate': 'Inserted',
      'pinstate_id': 1,
      'primary': True,
      'provider': 'Telstra Telstra',
      'pukleft': 10,
      'rsrp': -92,
      'rsrq': -13,
      'rxbytes': 1730527777073,
      'sc_band_av': 'Inactive',
      'service_modes': dict({
        '2G': list([
          'gsm_850',
          'gsm_900',
          'gsm_1800',
          'gsm_1900',
        ]),
        '3G': list([
          'wcdma_850',
          'wcdma_900',
          'wcdma_1900',
          'wcdma_2100',
        ]),
        '4G': list([
          'lte_b1',
          'lte_b2',
          'lte_b3',
          'lte_b4',
          'lte_b5',
          'lte_b7',
          'lte_b8',
          'lte_b28',
          'lte_b40',
        ]),
      }),
      'signal': -60,
      'sim_count': 2,
      'simstate': 'Inserted',
      'simstate_id': 0,
      'sinr': 0,
      'state': 'Connected',
      'state_id': 1,
      'temperature': 61,
      'txbytes': 1641289903812,
      'version': 'EC25AUFAR06A12M4G_01.001.01.001',
      'volte': False,
      'volte_supported': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_additional_device_fixtures[trb140]
  list([
    dict({
      'active_sim': 1,
      'auto_2g_bands': False,
      'auto_3g_bands': False,
      'auto_5g_mode': False,
      'band': 'LTE B20',
      'baudrate': 115200,
      'builtin': True,
      'busy_state': 'Idle',
      'busy_state_id': 1,
      'ca_signal': list([
      ]),
      'cell_info': list([
        dict({
          'bandwidth': '10',
          'cellid': '33903126',
          'earfcn': 6300,
          'mcc': '242',
          'mnc': '02',
          'pcid': 268,
          'tac': '2804',
          'ue_state': 3,
        }),
      ]),
      'cellid': '33903126',
      'cfg_version': 'BETA1108_01.005.00.000',
      'conntype': '4G (LTE)',
      'csd': True,
      'data_conn_state': 'Connected',
      'data_conn_state_id': 1,
      'data_off': False,
      'dynamic_mtu': True,
      'framed_routing': False,
      'iccid': '********',
      'id': '3-1',
      'imei': '********',
      'imsi': '********',
      'ipv6': True,
      'is_busy': 0,
      'low_signal_reconnect': True,
      'manufacturer': 'Quectel',
      'mobile_dfota': False,
      'mobile_stage': 19,
      'mode': 0,
      'model': 'EC25-EU',
      'modem_state_id': 1,
      'multi_apn': False,
      'name': 'Internal modem',
      'netstate': 'Registered, home',
      'netstate_id': 1,
      'no_ussd': False,
      'nr5g_sa_disabled': False,
      'ntype': 'LTE',
      'oper': 'Telia N',
      'operator': 'Telia N',
      'operator_state': 'Registered, home',
      'operator_state_id': 1,
      'operators_scan': True,
      'pinleft': 3,
      'pinstate': 'Inserted',
      'pinstate_id': 1,
      'primary': True,
      'provider': 'Telia N',
      'pukleft': 10,
      'rsrp': -104,
      'rsrq': -16,
      'rssi': -72,
      'rxbytes': 51312330,
      'sc_band_av': 'Inactive',
      'serial': 'MPC22G71D001500',
      'service_modes': dict({
        '2G': list([
          'gsm_900',
          'gsm_1800',
        ]),
        '3G': list([
          'wcdma_900',
          'wcdma_2100',
        ]),
        '4G': list([
          'lte_b1',
          'lte_b3',
          'lte_b7',
          'lte_b8',
          'lte_b20',
          'lte_b28',
          'lte_b38',
          'lte_b40',
          'lte_b41',
        ]),
      }),
      'signal': -72,
      'sim_count': 1,
      'sim_switch_enabled': False,
      'simstate': 'Inserted',
      'simstate_id': 0,
      'sinr': -2,
      'state': 'Connected',
      'state_id': 1,
      'tac': '2804',
      'temperature': 49,
      'txbytes': 40644649,
      'version': 'EC25EUGAR06A05M4G',
      'volte': False,
      'volte_supported': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_additional_device_fixtures[trb500]
  list([
    dict({
      'auto_5g_mode': False,
      'builtin': True,
      'csd': False,
      'dynamic_mtu': True,
      'framed_routing': True,
      'id': '3-1',
      'ipv6': True,
      'low_signal_reconnect': True,
      'multi_apn': False,
      'operators_scan': True,
      'primary': True,
      'sim_count': 1,
      'volte': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_fixture
  dict({
    'active_sim': 1,
    'auto_2g_bands': False,
    'auto_3g_bands': False,
    'auto_5g_mode': False,
    'band': '5G N78',
    'baudrate': 115200,
    'builtin': True,
    'busy_state': 'Idle',
    'busy_state_id': 1,
    'ca_signal': list([
      dict({
        'band': 'LTE B1',
        'bandwidth': '20',
        'frequency': 100,
        'pcid': 323,
        'primary': True,
        'rsrp': -87,
        'rsrq': -9,
        'sinr': 12,
      }),
      dict({
        'band': 'LTE B7',
        'bandwidth': '20',
        'frequency': 2850,
        'pcid': 364,
        'primary': False,
        'rsrp': -103,
        'rsrq': -13,
        'sinr': 3,
      }),
      dict({
        'band': 'LTE B20',
        'bandwidth': '10',
        'frequency': 6300,
        'pcid': 39,
        'primary': False,
        'rsrp': -83,
        'rsrq': -13,
        'sinr': 0,
      }),
      dict({
        'band': '5G N78',
        'bandwidth': '80',
        'frequency': 631968,
        'primary': False,
      }),
    ]),
    'cell_info': list([
      dict({
        'bandwidth': '20',
        'cellid': '987654',
        'earfcn': 111,
        'mcc': '262',
        'mnc': '02',
        'pcid': 323,
        'sinr': 12,
        'tac': '65432',
        'ue_state': 3,
      }),
      dict({
        'bandwidth': '80',
        'cellid': '987654',
        'mcc': '262',
        'mnc': '02',
        'nr-arfcn': 654321,
        'pcid': 220,
        'rsrp': -103,
        'rsrq': -12,
        'sinr': 3,
        'ue_state': 3,
      }),
    ]),
    'cellid': '987654',
    'cfg_version': '04.202.04.202',
    'conntype': '5G (NSA)',
    'csd': False,
    'data_conn_state': 'Connected',
    'data_conn_state_id': 1,
    'data_off': False,
    'dynamic_mtu': True,
    'framed_routing': True,
    'iccid': '12345678901234567890',
    'id': '2-1',
    'imei': '123456789012345',
    'imsi': '123456789012345',
    'ipv6': True,
    'is_busy': 0,
    'low_signal_reconnect': True,
    'manufacturer': 'Quectel',
    'mobile_dfota': False,
    'mobile_stage': 19,
    'mode': 0,
    'model': 'RG501Q-EU',
    'modem_state_id': 1,
    'multi_apn': True,
    'name': 'Internal modem',
    'netstate': 'Registered, home',
    'netstate_id': 1,
    'no_ussd': False,
    'nr5g_sa_disabled': False,
    'ntype': '5G-NSA',
    'oper': 'test-operator.de',
    'operator': 'test-operator.de',
    'operator_state': 'Registered, home',
    'operator_state_id': 1,
    'operators_scan': True,
    'pinleft': 3,
    'pinstate': 'Inserted',
    'pinstate_id': 1,
    'primary': True,
    'pukleft': 10,
    'rsrp': -86,
    'rsrq': -7,
    'rssi': -58,
    'rxbytes': 427791751874,
    'sc_band_av': 'Active',
    'serial': 'XXXYY12345678',
    'service_modes': dict({
      '3G': list([
        'wcdma_850',
        'wcdma_900',
        'wcdma_2100',
      ]),
      '4G': list([
        'lte_b1',
        'lte_b3',
        'lte_b5',
        'lte_b7',
        'lte_b8',
        'lte_b20',
        'lte_b28',
        'lte_b32',
        'lte_b38',
        'lte_b40',
        'lte_b41',
        'lte_b42',
        'lte_b43',
      ]),
      '5G_NSA': list([
        'nsa_5g_n1',
        'nsa_5g_n3',
        'nsa_5g_n5',
        'nsa_5g_n7',
        'nsa_5g_n8',
        'nsa_5g_n20',
        'nsa_5g_n28',
        'nsa_5g_n38',
        'nsa_5g_n40',
        'nsa_5g_n41',
        'nsa_5g_n77',
        'nsa_5g_n78',
      ]),
      '5G_SA': list([
        '5g_n1',
        '5g_n3',
        '5g_n5',
        '5g_n7',
        '5g_n8',
        '5g_n20',
        '5g_n28',
        '5g_n38',
        '5g_n40',
        '5g_n41',
        '5g_n77',
        '5g_n78',
      ]),
    }),
    'signal': -58,
    'sim_count': 2,
    'sim_switch_enabled': False,
    'simstate': 'Inserted',
    'simstate_id': 0,
    'sinr': 13,
    'state': 'Connected',
    'state_id': 1,
    'tac': '65432',
    'temperature': 45,
    'txbytes': 210590303696,
    'version': 'RG501QEUAAR12A11M4G',
    'volte': False,
    'volte_supported': True,
    'wwan_gnss_conflict': False,
  })
# ---
# name: TestModemsClient.test_get_status_parses_rutx12_fixture
  list([
    dict({
      'auto_5g_mode': False,
      'builtin': True,
      'csd': False,
      'dynamic_mtu': True,
      'framed_routing': False,
      'id': '3-1',
      'ipv6': True,
      'low_signal_reconnect': True,
      'multi_apn': True,
      'operators_scan': True,
      'primary': True,
      'sim_count': 1,
      'volte': True,
      'wwan_gnss_conflict': False,
    }),
    dict({
      'auto_5g_mode': False,
      'builtin': True,
      'csd': False,
      'dynamic_mtu': True,
      'framed_routing': False,
      'id': '1-1.2',
      'ipv6': True,
      'low_signal_reconnect': True,
      'multi_apn': True,
      'operators_scan': True,
      'sim_count': 1,
      'volte': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
